# nonebot-adapter-mail

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
nonebot/adapters/mail/: adapter.py  bot.py  config.py  event.py  exception.py  message.py  model.py  utils.py
nonebot/adapters/mail/api/: model.py
