[tool.poetry]
name = "nonebot-adapter-mail"
version = "0.1.0"
description = "Mail adapter for nonebot2"
authors = ["mobyw <mobyw66@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0"
aiosmtplib = "^2.0.2"
aioimaplib = "^1.0.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
nonemoji = "^0.1.4"
pre-commit = "^3.3.3"
pycln = "^2.1.5"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."
all = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
