[project]
name = "nonebot-adapter-mail"
version = "1.0.0-alpha.5"
description = "Mail adapter for nonebot2"
authors = [
    {name = "mobyw", email = "mobyw66@gmail.com"},
]
dependencies = [
    "nonebot2~=2.3",
    "aiosmtplib~=3.0",
    "aioimaplib~=1.1",
    "pydantic[email]<3.0.0,!=2.5.0,!=2.5.1,>=1.10.0",
    "mail-parser~=4.0",
]
requires-python = "<4.0,>=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }

typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.7.0",
    "isort>=5.13.2",
    "black>=24.0.0",
    "nonemoji>=0.1.4",
    "pre-commit>=4.0.1",
]

[tool.pdm.build]
includes = ["nonebot"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
